# purple-presage

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpack.cmake  purple.pc
.github/workflows/: build.yml  msvc-make.yml  windows.yml
dependencies/win32/: CMakeLists.txt
src/c/: Makefile  attachment.c  attachment_common.c  attachment_common.h  blist.c  bridge.c  connection.c  contact.c  direct.c  groups.c  init.c  init2.c  init3.c  init3.h  main.c  options.c  presage.h  profile.c  purple-2.h  qrcode.c  receive_attachment.c  receive_text.c  send.c  send_file.c  send_text.c  status.c  text.c
src/c/hehoe-common/: blist.c  blist.h
src/c/hehoe-purple2and3/: purple-2.h  purple-3.c  purple-3.h  purple.h
src/rust/: Cargo.toml  Makefile
src/rust/src/: attachment.rs  bridge.rs  bridge_commands.rs  bridge_structs.rs  commands.rs  contacts.rs  core.rs  debug.rs  lib.rs  receive.rs  receive_text.rs  send.rs  send_text.rs  structs.rs
