[package]
name = "purple-presage-backend"
version = "0.0.0"
edition = "2021"

[lib]
name = "purple_presage_backend"
path = "src/lib.rs"
crate-type = ["staticlib"]

# presage needs this, taken from https://github.com/whisperfish/presage/blob/c069a39/Cargo.toml
[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", rev = "c069a39" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "c069a39" }
mime-sniffer = { git = "https://github.com/kamadorueda/rust-mime-sniffer"}
mime_guess = "2.0"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
#stdint = "0.2" # TODO: find out how to use this for more reliable type widths
# these are mentioned in https://github.com/whisperfish/presage/blob/c069a39/Cargo.lock
reqwest = { version = "0.12.28", default-features = false, features = [] }
hyper-util = "0.1.20"
# these version numbers are taken from https://github.com/whisperfish/presage/blob/c069a39/presage-cli/Cargo.toml
futures = "0.3"
hex = "0.4"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary. Needs rust 1.59 or newer.
# these might optimize for size:
#opt-level = "z"
#lto = true
#codegen-units = 1
